# pwnsh

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml  run.sh
docs/: REVERSE_SHELLS.md
src/multishell/: __main__.py  config.py  fingerprint.py  raw_interact.py  session.py  transfer.py
src/multishell/tui/: app.py  modals.py  palette.py  styles.tcss
src/pwnsh/: __main__.py  _scan.py  config.py  fingerprint.py  listener.py  payloads.py  raw_interact.py  session.py  transfer.py
src/pwnsh/tui/: app.py  modals.py  palette.py  styles.tcss
tests/: conftest.py  test_fingerprint.py  test_hardening.py  test_listener.py  test_payloads.py  test_raw_and_reconnect.py  test_scan.py  test_session.py  test_transfer.py  test_tui.py
